crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__second__multiple__range_periodic__specifier.snap
---
source: crates/tools/cron/src/tests/unit/second.rs
expression: result
---
Ok(
    (
        ",1",
        SecondRule {
            kinds: [
                SecondKind {
                    range: (
                        Second(
                            1,
                        ),
                        Second(
                            59,
                        ),
                    ),
                    periodic: SecondPeriodic(
                        2,
                    ),
                },
            ],
        },
    ),
)
